--- a/app/src/main/res/layout/mainactivity.xml
+++ b/app/src/main/res/layout/mainactivity.xml
@@ -43,7 +43,7 @@
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:fontFamily="monospace"
-        android:text="THIS IS A STAND-ALONE ANDROID STUDIO PROJECT, CREATED USING JAVA DEPENDENCIES AND LIBRARIES, FIREBASE HANDLERS AND QUERY VALIDATING TOOLS. THIS WAS ONE OF MANY SECURITY BASED PROJECTS I'D BEEN WORKING ON ALONG WITH THE WEB-DEVELOPEMENT AND DEPLOYMENT ON APACHE SERVERS, THE FRONT-END BEING WRITTEN IN HTML, JS AND BOOTSTRAP. IT HAS BEEN A PLEASURE TO SEE Y'ALL HERE JUST STARTING WITH IDEAS OF SECURITY AND OPTIMAL APPROACH TO HANGOUT SOMEDAY INTO GOOD HANDS! BELOW ARE THE PLATFORMS ON WHICH WE COULD CONNECT, OR YOU COULD LOOK ME UP YOURSELF"
+        android:text="THIS IS A STAND-ALONE ANDROID STUDIO PROJECT, CREATED USING JAVA DEPENDENCIES AND LIBRARIES, FIREBASE HANDLERS AND QUERY VALIDATING TOOLS. THIS WAS ONE OF MANY SECURITY BASED PROJECTS I'D BEEN WORKING ON ALONG WITH THE WEB-DEVELOPEMENT AND MACHINE LEARNING, THE FRONT-END BEING WRITTEN REACT. IT HAS BEEN A PLEASURE TO SEE Y'ALL HERE. BELOW IS THE MAIL IN CASE WE'D EVER HAVE CONNECT, OR SEARCH FOR 'sambhavsaxena' on Github."
         android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
