added github username in place of email

--- a/app/src/main/res/layout/mainactivity.xml
+++ b/app/src/main/res/layout/mainactivity.xml
@@ -43,7 +43,7 @@
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:fontFamily="monospace"
-        android:text="THIS IS A STAND-ALONE ANDROID STUDIO PROJECT, CREATED USING JAVA DEPENDENCIES AND LIBRARIES, FIREBASE HANDLERS AND QUERY VALIDATING TOOLS. THIS WAS ONE OF MANY SECURITY BASED PROJECTS I'D BEEN WORKING ON ALONG WITH THE WEB-DEVELOPEMENT AND MACHINE LEARNING, THE FRONT-END BEING WRITTEN USING JAVASCRIPT FRAMEWORKS. IT HAS BEEN A PLEASURE TO SEE Y'ALL HERE. BELOW IS THE MAIL IN CASE WE'D EVER HAVE TO CONNECT, OR SEARCH FOR 'sambhavsaxena' ON GITHUB."
+        android:text="That's it, you've reached the end of the template. You could use this template for various purposes, and almost all the services that involve user authentication. As of now, the information stored in the database could be publicly accessed by anyone but in order to secure your database, you need to modify the previously specified rules. For further information and specific integration, feel free to contact."
         android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,7 @@
         android:id="@+id/textView6"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:text=" MAIL: sambhavsaxena02@outlook.com"
+        android:text=" Github: @sambhavsaxena"
         android:textAlignment="center"
         android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/button5"
